# pico_link_ii

./: README.md
driver/: pico_link_ii.c  pico_link_ii.h  说明.txt
driver/example/CH32V307_SPI_SEEKFREE_MT9V03X_GY/: main.c  pico_GY_spi.c
driver/example/CH32V307_SPI_SEEKFREE_MT9V03X_IPC/: main.c
driver/example/CH32V307_UART_SEEKFREE_MT9V03X_GY/: main.c
driver/example/CH32V307_UART_SEEKFREE_MT9V03X_IPC/: main.c  pico_link_ii.c  pico_link_ii.h
driver/example/RT1064_SPI_SEEKFREE_MT9V03X_GY/: main.c  pico_GY_spi.h  pico_link_ii.c
driver/example/RT1064_SPI_SEEKFREE_MT9V03X_IPC/: main.c
driver/example/RT1064_UART_SEEKFREE_MT9V03X_GY/: main.c  pico_GY.c  pico_GY.h
driver/example/RT1064_UART_SEEKFREE_MT9V03X_IPC/: main.c
driver/example/TC264_SPI_SEEKFREE_MT9V03X_GY/: cpu0_main.c
driver/example/TC264_SPI_SEEKFREE_MT9V03X_IPC/: cpu0_main.c
driver/example/TC264_UART_SEEKFREE_MT9V03X_GY/: cpu0_main.c  (+1 more)
firmware/pico_link_II/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig  sdkconfig.esp32-c3-devkitm-1
firmware/pico_link_II/components/pico_components/: CMakeLists.txt  pico_config.c  pico_encrypt.c  pico_flash.c  pico_leds.c  pico_spi.c  pico_tcp.c  pico_uart.c  pico_udp.c  pico_web_server.c  pico_wifi_ap.c  pico_wifi_sta.c
firmware/pico_link_II/components/pico_components/include/: pico_config.h  pico_encrypt.h  pico_flash.h  pico_headfile.h  pico_leds.h  pico_spi.h  pico_tcp.h  pico_uart.h  pico_udp.h  pico_web_server.h  pico_wifi_ap.h  pico_wifi_sta.h
hardware/: BOM_pico_link_ii.xlsx  IBOM_pico_link_ii.html  PickAndPlace_pico_link_ii.xlsx
(+43 files in other folders)
